Minor changes notification service, global exception handling, request logging filter, and created project documentation